Fix Wookmark container overflow. Closes issue #70
Wookmark expects a relative-positioned container element
around the items it controls.

--- a/manticore/site_media/static/css/site.css
+++ b/manticore/site_media/static/css/site.css
@@ -788,6 +788,12 @@ form .input {
      margin-left: 130px;
 }
 
+#nails_container {
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+
 .endless_container {
     position: absolute;
     bottom: 5px;
